se añadio referencia al feed de instagram

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                 <div class="clear"></div>
             </div>
 
-            <div id="youtube-div" class="content">
+            <!--<div id="youtube-div" class="content">
                 <h1 class="bolder font-30 center-text top-30 color-highlight">VIDEO BLOG</h1>
                 <div class="divider"></div>
                 <p style="text-align: center"><iframe height="300" src="https://www.youtube.com/embed/videoseries?list=PL0N6gsvlagpJs-NqbypBp7lLqMtWGoybZ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%;"></iframe></p>
-            </div>
+            </div>-->
 
             <div data-height="cover" class="caption">
                 <div class="caption-center">
@@ -168,7 +168,7 @@
                 </div>
             </div>
 
-            <!--<div id="instagram-div" class="content">
+            <div id="instagram-div" class="content">
                 <p style="text-align: center;"><img src="images/instagram-logo.png" style="margin: 0 auto; width: 70px;" alt="Instram Logo"></p>
                 <div class="divider"></div>
                 <p style="text-align: center">
@@ -176,7 +176,7 @@
                 </p>
             </div>
 
-            <div id="facebook-div" class="content">
+            <!--<div id="facebook-div" class="content">
                 <p style="text-align: center;"><img src="images/facebook-logo.png" style="margin: 0 auto; width: 70px;" alt="Instram Logo"></p>
                 <div class="divider"></div>
                 <p style="text-align: center">
