se agrego el archivo manifest y configuraciones para moviles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <title>EazyMobile</title>
+    <meta name="description" content="APP OFICIAL DE SILVANO SERRANO. CANDIDATO A LA GOBERNACION DE NORTE DE SANTANDER" />
+    <meta name="keywords" content="silvano,serrano,silvano serrano,gobernación,gobernacion,candidato gobernacion,más oportunidades,
+                                 más oportunidades para la gente,oportunidades,oportunidades para la region,gobernador de norte de santander" />
+    <title>Silvano Serrano</title>
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/framework.css">
@@ -13,6 +17,35 @@
     <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">
 
     <script src="scripts/lightwidget.js"></script>
+
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+
+    <!--Manifest JSON-->
+    <link rel="manifest" href="manifest.json">
+
+    <!--Android-->
+    <meta name="theme-color" content="#0051a3">
+
+    <!--IOS-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="images/icons/icon-152x152.png">
+
+    <link href="images/splash/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="images/splash/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="images/splash/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="images/splash/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="images/splash/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="TwittoriOS">
 </head>
 
 <body class="theme-light" data-highlight="blue2">
@@ -62,13 +95,13 @@
                 </div>
             </div>
 
-            <!--<div class="under-slider-button">
+            <div class="under-slider-button">
                 <div class="cta-socials">
                     <a class="icon icon-s icon-round shadow-small bg-facebook" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="icon icon-s icon-round shadow-small bg-whatsapp" href="#"><i class="fab fa-whatsapp"></i></a>
                     <a class="icon icon-s icon-round shadow-small bg-twitter" href="#"><i class="fab fa-twitter"></i></a>
                 </div>
-            </div>-->
+            </div>
 
             <div class="content">
                 <!--<img class="preload-image horizontal-center" width="120" src="./images/empty.png" data-src="./images/preload-logo.png" alt="img">-->
@@ -168,22 +201,22 @@
                 </div>
             </div>
 
-            <div id="instagram-div" class="content">
+            <!--<div id="instagram-div" class="content">
                 <p style="text-align: center;"><img src="images/instagram-logo.png" style="margin: 0 auto; width: 70px;" alt="Instram Logo"></p>
                 <div class="divider"></div>
                 <p style="text-align: center">
                     <iframe src="https://lightwidget.com/widgets/41fde09d30ae5c35b6dca53a1c6b7964.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
                 </p>
-            </div>
+            </div>-->
 
-            <!--<div id="facebook-div" class="content">
+            <div id="facebook-div" class="content">
                 <p style="text-align: center;"><img src="images/facebook-logo.png" style="margin: 0 auto; width: 70px;" alt="Instram Logo"></p>
                 <div class="divider"></div>
                 <p style="text-align: center">
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSilvanoSerranoG%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=234999307082248"
                         width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </p>
-            </div>-->
+            </div>
 
             <div class="divider divider-margins"></div>
 
@@ -259,6 +292,33 @@
 
         <div class="menu-hider"></div>
     </div>
+
+    <!-- WhatsHelp.io widget -->
+    <script type="text/javascript">
+        (function() {
+            var options = {
+                facebook: "431986840551858", // Facebook page ID
+                whatsapp: "+573203688126", // WhatsApp number
+                call_to_action: "", // Call to action
+                button_color: "#ea8420", // Color of button
+                position: "right", // Position may be 'right' or 'left'
+                order: "facebook,whatsapp", // Order of buttons
+            };
+            var proto = document.location.protocol,
+                host = "whatshelp.io",
+                url = proto + "//static." + host;
+            var s = document.createElement('script');
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = url + '/widget-send-button/js/init.js';
+            s.onload = function() {
+                WhWidgetSendButton.init(host, proto, options);
+            };
+            var x = document.getElementsByTagName('script')[0];
+            x.parentNode.insertBefore(s, x);
+        })();
+    </script>
+    <!-- /WhatsHelp.io widget -->
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
