se desabilito el fan page de facebook

--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
                 </p>
             </div>-->
 
-            <div id="facebook-div" class="content">
+            <!--<div id="facebook-div" class="content">
                 <p style="text-align: center;"><img src="images/facebook-logo.png" style="margin: 0 auto; width: 70px;" alt="Instram Logo"></p>
                 <div class="divider"></div>
                 <p style="text-align: center">
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSilvanoSerranoG%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=234999307082248"
                         width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 </p>
-            </div>
+            </div>-->
 
             <div class="divider divider-margins"></div>
 
